--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "vue": "^3.5.13",
+    "vue3-toastify": "^0.2.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
